--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,10 @@
     height: 0px;
 }
 
+.rotate-180 {
+    transform: rotateX(180deg);
+}
+
 .cloud-container-lg{
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
