--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -9,6 +9,11 @@
 
 .rotate-180 {
     transform: rotateX(180deg);
+    transition: .5s;
+}
+
+.rotate-0 {
+    transition: .5s ease;
 }
 
 .cloud-container-lg{
