grafica mezza top

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -16,6 +16,17 @@
     transition: .5s ease;
 }
 
+.cloud-btn-lg:hover{
+    background-color: lightcyan;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+}
+.cloud-btn-lg{
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+}
+
 .cloud-container-lg{
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
